completed side-navbar

--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -1,3 +1,40 @@
 .layer {
   display: flex;
+  min-height: 100vh;
+  overflow-y: hidden;
+  &::before {
+    content: '';
+    position: absolute;
+    top: -169.42041015625px;
+    left: -238.78857421875px;
+    width: 705px;
+    height: 730px;
+    z-index: -1;
+    transform: matrix(0.97, -0.26, 0.26, 0.97, 0, 0);
+    background: transparent
+      linear-gradient(
+        180deg,
+        #a0d4ff 0%,
+        #d48ec5 33%,
+        #ffc2ac 58%,
+        #ffe9b1 86%,
+        #fff5c7 100%
+      )
+      0% 0% no-repeat padding-box;
+    opacity: 0.4;
+    filter: blur(50px);
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    z-index: -1;
+    right: 0px;
+    width: 1407px;
+    height: 337px;
+    transform: rotate(0deg);
+    background-image: url('../assets/images/Footer.png');
+    background-repeat: no-repeat;
+    filter: blur(50px);
+  }
 }
