--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,3 +1,17 @@
 .navbar-vertical {
   width: 300px;
+  box-shadow: 10px 0px 40px #00000034;
+  text-align: center;
+  padding-top: 3rem;
+  &::before {
+    content: '';
+    z-index: -1;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 300px;
+    height: 100%;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    opacity: 0.4;
+  }
 }
