--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,6 +3,10 @@
   box-shadow: 10px 0px 40px #00000034;
   text-align: center;
   padding-top: 3rem;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
   &::before {
     content: '';
     z-index: -1;
@@ -13,5 +17,17 @@
     height: 100%;
     background: #ffffff 0% 0% no-repeat padding-box;
     opacity: 0.4;
+  }
+  .walletBtn {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 100px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-family: 'Poppins-Medium';
+    font-size: 18px;
+    padding: 1rem 3rem;
   }
 }
