--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -10,6 +10,7 @@
     background-image: url('../assets/images/btn-bg.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 50% 50%;
     &:hover {
       opacity: 0.8;
     }
