--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -24,7 +24,7 @@
   }
   &::after {
     content: '';
-    position: absolute;
+    position: fixed;
     left: 100px;
     bottom: 0px;
     z-index: -1;
