--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,7 +3,7 @@
   box-shadow: 10px 0px 40px #00000034;
   text-align: center;
   padding-top: 3rem;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   bottom: 0px;
