--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -3,6 +3,10 @@
   opacity: 1;
   border: none;
   color: white;
+  &:disabled {
+    cursor: default;
+    opacity: 0.8;
+  }
   &:focus {
     background-color: transparent;
   }
