--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -5,7 +5,8 @@
     border-radius: 4px;
     border-right: 0px;
     color: #3c4760;
-    padding-right: 60px;
+    padding-right: 145px;
+    background-color: white;
     &:focus {
       border: 1px solid rgba(#4c646f, 0.2) !important;
       box-shadow: none !important;
@@ -16,7 +17,7 @@
     border-right: 1px solid rgba(#4c646f, 0.2);
     border-top-right-radius: 4px !important;
     border-bottom-right-radius: 4px !important;
-    font-weight: bold;
+    // font-weight: bold;
   }
   .tokenName {
     position: absolute;
@@ -30,6 +31,10 @@
   }
   .input-group-append {
     min-width: 110px;
+    cursor: pointer;
+    &:hover {
+      opacity: 0.8;
+    }
     .input-group-text {
       width: 100%;
       justify-content: center;
