--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -18,6 +18,48 @@
     background: #ffffff 0% 0% no-repeat padding-box;
     opacity: 0.4;
   }
+  &__connectedBox {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 100px;
+    left: 0;
+    right: 0;
+    hr {
+      &::before {
+        content: 'My Overview';
+        position: absolute;
+        left: 30px;
+        top: 5px;
+        background-color: white;
+        padding: 0px 8px;
+        font-family: 'Poppins-Medium';
+        font-size: 12px;
+        color: rgba(#002332, 0.4);
+      }
+    }
+  }
+  &__item {
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h6 {
+      font-family: 'Poppins-Medium';
+      font-size: 12px;
+      color: #3c4760;
+      margin-bottom: 0px;
+    }
+    div {
+      color: white;
+      padding: 2px 12px;
+      background-color: rgba(#b8c2c7, 0.4);
+      border-radius: 12px;
+      font-size: 12px;
+    }
+  }
   .walletBtn {
     position: absolute;
     margin-left: auto;
