tokens card in dashboard

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -18,6 +18,7 @@
 @import './speedometer';
 @import './vaultdebt';
 @import './pricecard';
+@import './modalCard';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
