--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -19,6 +19,7 @@
 @import './vaultdebt';
 @import './pricecard';
 @import './modalCard';
+@import './dashboardModal';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
