--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -20,6 +20,7 @@
 @import './pricecard';
 @import './modalCard';
 @import './dashboardModal';
+@import './vaulthistorytable';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
