completed vault dashboard

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -21,6 +21,7 @@
 @import './modalCard';
 @import './dashboardModal';
 @import './vaulthistorytable';
+@import './amountPanel';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
