--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -24,6 +24,8 @@
 @import './amountPanel';
 @import './activeVaults';
 @import './activePairCard';
+@import './archivedVaults';
+@import './archivedPairCard';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
