risk rate api integration

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -26,6 +26,7 @@
 @import './activePairCard';
 @import './archivedVaults';
 @import './archivedPairCard';
+@import './disclaimerModal';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
