--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -34,6 +34,9 @@
       margin-bottom: 0px;
       text-transform: uppercase;
     }
+    .extreme {
+      color: #ff3131;
+    }
     .high {
       color: #ff3131;
     }
