--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -1,4 +1,10 @@
 .availablevaults {
   padding-left: 5rem;
   padding-right: 5rem;
+  &__loading {
+    min-height: 50vh !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
