--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -1,5 +1,6 @@
 .filterpanel {
   margin-left: 10px;
+  margin-right: 10px;
   h2 {
     font-family: 'Poppins-Medium';
     letter-spacing: -0.72px;
@@ -19,6 +20,9 @@
       color: #3c4760;
       font-family: 'Poppins-Regular';
       height: 3rem !important;
+      @include respond-to(sm) {
+        width: 80%;
+      }
       &:focus {
         border-bottom: 1px solid rgba(#4c646f, 0.2) !important;
         -webkit-box-shadow: 0px !important;
