--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,15 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   padding-right: 4rem;
+  justify-content: flex-end;
+  @include respond-to(sm) {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-right: 10px;
+    padding-left: 10px;
+    justify-content: space-between;
+    border-bottom: 1px solid #ebecef;
+  }
   // min-height: 85px;
 
   &__connected {
