vault-dashboard reponsive

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,6 +10,9 @@
     padding-left: 10px;
     justify-content: space-between;
     border-bottom: 1px solid #ebecef;
+    img {
+      width: 150px;
+    }
   }
   // min-height: 85px;
 
