--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -2,6 +2,10 @@
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  @include respond-to(sm) {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   h4 {
     font-family: 'Poppins-Medium';
     letter-spacing: -0.36px;
