--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -13,6 +13,7 @@
   left: 0px;
   bottom: 0px;
   @include respond-to(sm) {
+    position: absolute;
     padding-top: 0px;
     top: 110px;
     background-color: white;
