completed wallet integration basically

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -29,6 +29,7 @@
 @import './archivedPairCard';
 @import './disclaimerModal';
 @import './_mobileMenuTrigger';
+@import './walletProviderModal';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Light', '../assets/fonts/Poppins-Light');
