--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -88,11 +88,19 @@
     margin-left: auto;
     margin-right: auto;
     bottom: 100px;
-    left: 0;
+    left: 35px;
     right: 0;
     text-align: center;
     font-family: 'Poppins-Medium';
     font-size: 18px;
     padding: 1rem 3rem;
+    @include respond-to(sm) {
+      position: absolute !important;
+      margin-left: auto !important;
+      margin-right: auto !important;
+      left: 0px !important;
+      right: 0px !important;
+      text-align: center !important;
+    }
   }
 }
