--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -1,6 +1,18 @@
 .tokenpaircard {
   border: 1px solid rgba(#4c646f, 0.2);
   border-radius: 8px;
+  .insta-buy-lp {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.8rem 0rem;
+    width: 100%;
+  }
+  .generate {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.9rem 0rem;
+    width: 100%;
+  }
   &__header {
     padding: 20px;
     display: flex;
@@ -67,25 +79,25 @@
   &__btnBox {
     margin: 0px;
     padding: 20px 10px;
-
-    .insta-buy-lp {
-      font-family: 'Poppins-Medium';
-      font-size: 15px;
-      padding: 0.8rem 0rem;
-      width: 100%;
-    }
-    .generate {
-      font-family: 'Poppins-Medium';
-      font-size: 15px;
-      padding: 0.9rem 0rem;
-      width: 100%;
-    }
   }
   &__detailBox {
     &__content {
       padding: 20px;
       padding-top: 0px;
       color: #4c646f;
+      p {
+        font-family: 'Poppins-SemiBold';
+        color: #002332;
+      }
+      &--tokens {
+        margin-top: 10px;
+        img {
+          width: 20px;
+          margin-right: 5px;
+        }
+        font-size: 12px;
+        font-family: 'Poppins-Regular';
+      }
     }
     &__toggle {
       cursor: pointer;
