vaults overvew listview

--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -12,4 +12,16 @@
     justify-content: center;
     align-items: center;
   }
+  .lp-button {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.6rem 0.8rem;
+    width: 100%;
+  }
+  .generate {
+    font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding: 0.9rem 0rem;
+    width: 100%;
+  }
 }
