--- a/src/scss/_availablevaults.scss
+++ b/src/scss/_availablevaults.scss
@@ -1,6 +1,7 @@
 .availablevaults {
   padding-left: 5rem;
   padding-right: 5rem;
+  background-color: var(--background);
   @include respond-to(sm) {
     padding-top: 2rem;
     padding-left: 0px;
