--- a/src/scss/_archivedVaults.scss
+++ b/src/scss/_archivedVaults.scss
@@ -2,6 +2,7 @@
   padding-left: 5rem;
   padding-right: 5rem;
   min-height: calc(100vh - 350px);
+  background-color: var(--background);
   @include respond-to(sm) {
     padding-top: 2rem;
     padding-left: 0px;
