--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -4,7 +4,7 @@
   h2 {
     font-family: 'Poppins-Medium';
     letter-spacing: -0.72px;
-    color: #3c4760;
+    color: var(--primary-color);
     font-size: 24px;
   }
   .form-group {
