--- a/src/scss/_instabuylp.scss
+++ b/src/scss/_instabuylp.scss
@@ -1,6 +1,7 @@
 .instabuylp {
-  margin-top: 30px;
+  padding-top: 30px;
   min-height: 50vh;
+  background-color: var(--background);
   h3 {
     font-family: 'Poppins-Medium';
     font-size: 24px;
