--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -37,6 +37,38 @@
 @include font-face('Poppins-Medium', '../assets/fonts/Poppins-Medium');
 @include font-face('Poppins-Regular', '../assets/fonts/Poppins-Regular');
 
+:root {
+  /* Colors: */
+  --unnamed-color-2e5fe2: #2e5fe2;
+  --unnamed-color-ffffff: #ffffff;
+  --unnamed-color-002332: #002332;
+  --unnamed-color-4c646f: #4c646f;
+  --unnamed-color-f48c57: #f48c57;
+  --unnamed-color-ff69ce: #ff69ce;
+  --unnamed-color-bc5cf7: #bc5cf7;
+  --unnamed-color-0f6eff: #0f6eff;
+  --unnamed-color-5fb5ff: #5fb5ff;
+  --unnamed-color-ff3131: #ff3131;
+  --unnamed-color-07b127: #07b127;
+}
+[data-theme='dark'] {
+  --background: #17161f;
+  --nav-boxshadow: none;
+  --primary-color: #ffffff;
+  --link-color: #ffffff;
+  --primary-border: #1b1d26;
+  --secondary-border: #ffffff;
+}
+
+[data-theme='light'] {
+  --background: transparent;
+  --nav-boxshadow: 10px 0px 40px #00000034;
+  --primary-color: #002332;
+  --link-color: #727c81;
+  --primary-border: #dbe0e2;
+  --secondary-border: #4c646f;
+}
+
 // --unnamed-color-002332: #002332;
 // --unnamed-color-4c646f: #4c646f;
 // --unnamed-color-f48c57: #f48c57;
@@ -47,45 +79,58 @@
 // --unnamed-color-ff3131: #ff3131;
 // --unnamed-color-07b127: #07b127;
 
+// .light {
+//   --background: #f1faee;
+//   --background-alt: #a8dadc;
+//   --foreground: #1d3557;
+//   --accent: #0e8185;
+// }
+// .dark {
+//   --background: #1d3557;
+//   --background-alt: #457b9d;
+//   --foreground: #f1faee;
+//   --accent: #84a59d;
+// }
+
 p {
-    margin-bottom: 0px !important;
+  margin-bottom: 0px !important;
 }
 
 input {
-    height: auto !important;
+  height: auto !important;
 }
 
 .row {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
 .tooltip-inner {
-    max-width: 250px !important;
-    padding: 16px !important;
-    // font-family: 'Poppins-Regular' !important;
-    font-size: 12px !important;
-    text-align: left !important;
-    border-radius: 8px !important;
+  max-width: 250px !important;
+  padding: 16px !important;
+  // font-family: 'Poppins-Regular' !important;
+  font-size: 12px !important;
+  text-align: left !important;
+  border-radius: 8px !important;
 }
 
 .modal {
-    background-color: transparent;
-    box-shadow: none;
-    max-height: 100%;
+  background-color: transparent;
+  box-shadow: none;
+  max-height: 100%;
 }
 
 .modal .modal-content {
-    padding: 0px;
-    border-radius: 16px;
+  padding: 0px;
+  border-radius: 16px;
 }
 
 .modal .modal-footer {
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
 
 .modal-lg,
 .modal-xl {
-    max-width: 480px !important;
+  max-width: 480px !important;
 }
